# fuel-core

./: .codespellrc  .gitattributes  .gitignore  .policy.yml  .prettierrc  .rustfmt.toml  .travis.yml  .typos.toml  :w  CHANGELOG.md  CHAOS_FINDINGS.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  HA_FAILOVER_ISSUES.md  LICENSE  Makefile  Makefile.toml  README.md  SECURITY.md  bench.py  buidler.config.js  ci_checks.sh  clippy.toml  docker-compose.yml  flake.nix  fuel-core.yml  index.html  install-deps.sh  package-lock.json  rust-toolchain.toml  rustc-ice-2025-02-27T13_47_33-878740.txt  rustc-ice-2025-02-27T13_47_33-878742.txt  rustc-ice-2025-02-27T13_47_35-878760.txt  rustc-ice-2025-02-27T13_47_37-878787.txt  rustc-ice-2025-02-27T13_47_37-878790.txt  rustfmt.toml  test.rs  test.sh  (+1 more)
benches/: Cargo.toml  README.md  capture.yaml
benches/benches/: block_target_gas.rs  contract.rs  contract_root.rs  db_lookup_times.rs  end_to_end_query_times.rs  generate_test_data.rs  import.rs  read_view_get_coins.rs  rocks.rs  shared_gas_price_algorithm.rs  state.rs  transaction.rs  transaction_throughput.rs  utils.rs  vm.rs  vm_initialization.rs
benches/benches-outputs/: Cargo.toml
benches/src/: collect.rs  default_gas_costs.rs  import.rs  lib.rs  model.rs  regression.rs  transaction_throughput.rs  utils.rs
dap/: Cargo.toml  build.rs
dap/tests/: dap.rs
fuel-benches/: Cargo.toml  capture.yaml
fuel-benches/benches/: vm.rs
fuel-benches/src/: lib.rs
fuel-block-executor/: Cargo.toml  README.md
fuel-block-executor/src/: config.rs  lib.rs  refs.rs
fuel-block-importer/: Cargo.toml  README.md
fuel-block-importer/src/: config.rs  lib.rs  service.rs
fuel-block-producer/: Cargo.toml  README.md
fuel-block-producer/src/: adapters.rs  block_producer.rs  config.rs  db.rs  lib.rs  mocks.rs  ports.rs  service.rs
fuel-block-producer/tests/: integration.rs
fuel-chain-config/: Cargo.toml  README.md
fuel-chain-config/src/: chain_config.rs  config.rs  db.rs  genesis.rs  lib.rs  serialization.rs
fuel-client/: Cargo.toml  build.rs
fuel-client/assets/: schema.sdl
fuel-client/src/: client.rs  lib.rs  main.rs  schema.rs
fuel-client/tests/: blocks.rs  coin.rs  dap.rs  health.rs  lib.rs  tx.rs
fuel-core/: Cargo.toml  build.rs
fuel-core-bft/: Cargo.toml  README.md
fuel-core-bft/src/: lib.rs  service.rs
fuel-core-interfaces/: Cargo.toml  README.md
fuel-core-interfaces/src/: bft.rs  block_importer.rs  block_producer.rs  db.rs  executor.rs  lib.rs  model.rs  p2p.rs  poa_coordinator.rs  primitive_types.rs  relayer.rs  signer.rs  sync.rs  txpool.rs  utils.rs
fuel-core/src/: args.rs  chain_conf.rs  chain_config.rs  cli.rs  coin_lookup.rs  coin_query.rs  config.rs  database.rs  debugger.rs  executor.rs  lib.rs  main.rs  metrics.rs  model.rs  query.rs  resource_query.rs  runtime.rs  schema.rs  service.rs  state.rs  test_utils.rs  tx_pool.rs  vm_database.rs
fuel-core/tests/: test_indexer.rs
fuel-database/: Cargo.toml
fuel-database/src/: error.rs  in_memory.rs  lib.rs  rocks_db.rs  tables.rs  transactional.rs
fuel-debugger/: Cargo.toml
fuel-debugger/src/: lib.rs  main.rs  names.rs
fuel-indexer/: Cargo.toml  run_local.sh
fuel-indexer/.cargo/: config
fuel-indexer/api_server/: Cargo.toml  query_test.sh
fuel-indexer/derive/: Cargo.toml
fuel-indexer/graphql/: Cargo.toml
fuel-indexer/indexer/: Cargo.toml  Cargo.toml.orig  runnit.sh
fuel-indexer/lib/: Cargo.toml
fuel-indexer/schema/: .env  Cargo.toml  Cargo.toml.orig  README.md  diesel.toml  diesel.toml.template  generate_schemas.sh
fuel-indexer/src/: lib.rs
fuel-indexer/util/: Cargo.toml
fuel-metrics/: Cargo.toml
fuel-metrics/src/: core_metrics.rs  lib.rs  p2p_metrics.rs  service.rs  txpool_metrics.rs
fuel-p2p/: Cargo.toml
fuel-p2p/src/: behavior.rs  codecs.rs  config.rs  db.rs  discovery.rs  gossipsub.rs  lib.rs  orchestrator.rs  peer_info.rs  ports.rs  request_response.rs  service.rs  utils.rs
fuel-poa-coordinator/: Cargo.toml  README.md
fuel-poa-coordinator/src/: config.rs  db.rs  deadline_clock.rs  lib.rs  ports.rs  service.rs
fuel-poa-coordinator/tests/: test_trigger.rs
fuel-relayer/: Cargo.toml  README.md  flake.nix
fuel-relayer/abi/: Fuel.json  FuelMessagePortal.json  FuelSidechain.json  IFuelMessageOutbox.json  ValidatorSet.json
fuel-relayer/src/: abi.rs  adapters.rs  block_commit.rs  config.rs  db.rs  event_handler.rs  finalization_queue.rs  interface.rs  lib.rs  log.rs  main.rs  mock_db.rs  pending_blocks.rs  pending_events.rs  pending_queue.rs  relayer.rs  service.rs  test_helpers.rs  validator_set.rs  validators.rs
fuel-relayer/test/: run.rs
fuel-relayer/tests/: integration.rs
fuel-sync/: Cargo.toml  README.md
fuel-sync/src/: lib.rs  service.rs
fuel-tests/: Cargo.toml
fuel-tests/tests/: balances.rs  banknote.rs  blocks.rs  chain.rs  coin.rs  contract.rs  dap.rs  debugger.rs  example_tx.json  health.rs  helpers.rs  lib.rs  messages.rs  metrics.rs  node_info.rs  poa.rs  relayer.rs  resource.rs  snapshot.rs  trigger_integration.rs  tx.rs  tx_gossip.rs
fuel-txpool/: Cargo.toml  README.md
fuel-txpool/src/: config.rs  containers.rs  db.rs  interface.rs  lib.rs  mock_db.rs  service.rs  subscribers.rs  test_helpers.rs  txpool.rs  types.rs
graph-node-fuel/: .dockerignore  .gitignore  .ignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NEWS.md  README.md  cosmos_config.toml  fuel_config.toml  rust-toolchain.toml  testis.json
graph-node-fuel/.cargo/: config.toml
graph-node-fuel/.devcontainer/: devcontainer.json  docker-compose.yml
graph-node-fuel/.github/: dependabot.yml
graph-node-fuel/core/: Cargo.toml
graph-node-fuel/docker/: Dockerfile  README.md  build.sh  cloudbuild.yaml  docker-compose.yml  setup.sh  start  tag.sh  wait_for
index-runner/: .env  Cargo.toml  postgres.sql  schema.graphql  setup_meta.sql
indexer-lib/: Cargo.toml
relayer/: Cargo.toml  README.md
storage/: Cargo.toml
tests/: Cargo.toml  common.rs  crypto.rs  vm.rs  vm_tests.rs
tx-client/: Cargo.toml  build.rs
txpool/: Cargo.toml  README.md
(+137925 files in other folders)
