[workspace]
# Use the new resolver to prevent dev-deps and build-deps from enabling debugging or test features in production.
members = [
  "benches",
  "bin/e2e-test-client",
  "bin/fuel-core",
  "bin/fuel-core-client",
  "bin/keygen",
  "crates/chain-config",
  "crates/client",
  "crates/compression",
  "crates/database",
  "crates/fuel-core",
  "crates/fuel-gas-price-algorithm",
  "crates/keygen",
  "crates/metrics",
  "crates/services",
  "crates/services/consensus_module",
  "crates/services/consensus_module/bft",
  "crates/services/consensus_module/poa",
  "crates/services/executor",
  "crates/services/gas_price_service",
  "crates/services/importer",
  "crates/services/p2p",
  "crates/services/producer",
  "crates/services/relayer",
  "crates/services/sync",
  "crates/services/txpool_v2",
  "crates/services/upgradable-executor",
  "crates/services/upgradable-executor/wasm-executor",
  "crates/storage",
  "crates/trace",
  "crates/types",
  "tests",
  "xtask",
]
resolver = "2"

exclude = ["version-compatibility"]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "unwind"

[workspace.package]
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["concurrency", "cryptography::cryptocurrencies", "emulators"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "vm"]
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-core"
version = "0.40.0"

[workspace.dependencies]
# Workspace members
fuel-core = { version = "0.40.0", path = "./crates/fuel-core", default-features = false }
fuel-core-client-bin = { version = "0.40.0", path = "./bin/fuel-core-client" }
fuel-core-bin = { version = "0.40.0", path = "./bin/fuel-core" }
fuel-core-keygen = { version = "0.40.0", path = "./crates/keygen" }
fuel-core-keygen-bin = { version = "0.40.0", path = "./bin/keygen" }
fuel-core-chain-config = { version = "0.40.0", path = "./crates/chain-config", default-features = false }
fuel-core-client = { version = "0.40.0", path = "./crates/client" }
fuel-core-compression = { version = "0.40.0", path = "./crates/compression" }
fuel-core-database = { version = "0.40.0", path = "./crates/database" }
fuel-core-metrics = { version = "0.40.0", path = "./crates/metrics" }
fuel-core-services = { version = "0.40.0", path = "./crates/services" }
fuel-core-consensus-module = { version = "0.40.0", path = "./crates/services/consensus_module" }
fuel-core-bft = { version = "0.40.0", path = "./crates/services/consensus_module/bft" }
fuel-core-poa = { version = "0.40.0", path = "./crates/services/consensus_module/poa" }
fuel-core-executor = { version = "0.40.0", path = "./crates/services/executor", default-features = false }
fuel-core-importer = { version = "0.40.0", path = "./crates/services/importer" }
fuel-core-gas-price-service = { version = "0.40.0", path = "crates/services/gas_price_service" }
fuel-core-p2p = { version = "0.40.0", path = "./crates/services/p2p" }
fuel-core-producer = { version = "0.40.0", path = "./crates/services/producer" }
fuel-core-relayer = { version = "0.40.0", path = "./crates/services/relayer" }
fuel-core-sync = { version = "0.40.0", path = "./crates/services/sync" }
fuel-core-txpool = { version = "0.40.0", path = "./crates/services/txpool_v2" }
fuel-core-storage = { version = "0.40.0", path = "./crates/storage", default-features = false }
fuel-core-trace = { version = "0.40.0", path = "./crates/trace" }
fuel-core-types = { version = "0.40.0", path = "./crates/types", default-features = false }
fuel-core-tests = { version = "0.0.0", path = "./tests" }
fuel-core-upgradable-executor = { version = "0.40.0", path = "./crates/services/upgradable-executor" }
fuel-core-wasm-executor = { version = "0.40.0", path = "./crates/services/upgradable-executor/wasm-executor", default-features = false }
fuel-core-xtask = { version = "0.0.0", path = "./xtask" }
fuel-gas-price-algorithm = { version = "0.40.0", path = "crates/fuel-gas-price-algorithm" }

# Fuel dependencies
fuel-vm-private = { version = "0.58.2", package = "fuel-vm", default-features = false }

# Common dependencies
anyhow = "1.0"
async-trait = "0.1"
cynic = { version = "3.1.0", features = ["http-reqwest"] }
clap = "4.4"
derivative = { version = "2" }
derive_more = { version = "0.99" }
enum-iterator = "1.2"
hex = { version = "0.4", features = ["serde"] }
hyper = { version = "0.14.26" }
num-rational = "0.4.2"
primitive-types = { version = "0.12", default-features = false }
rand = "0.8"
parking_lot = "0.12"
tokio = { version = "1.27", default-features = false }
tokio-rayon = "2.1.0"
tokio-stream = "0.1"
tokio-util = { version = "0.7", default-features = false }
tracing = "0.1"
thiserror = "1.0"
futures = "0.3"
postcard = "1.0"
tracing-attributes = "0.1"
tracing-subscriber = "0.3"
serde = "1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3.4", default-features = false }
strum = { version = "0.25" }
strum_macros = "0.25"
# enable cookie store to support L7 sticky sessions
reqwest = { version = "0.12.0", default-features = false, features = [
  "rustls-tls",
  "cookies",
] }
mockall = "0.11"
num_enum = "0.7"
test-case = "3.3"
impl-tools = "0.10"
test-strategy = "0.3"
parquet = { version = "49.0", default-features = false }
rayon = "1.10.0"
bytes = "1.5.0"
paste = "1.0"
pretty_assertions = "1.4.0"
proptest = "1.1"
pin-project-lite = "0.2"
axum = "0.5"
once_cell = "1.16"
prometheus-client = "0.22.0"
indicatif = { version = "0.17", default-features = false }
itertools = { version = "0.12", default-features = false }
insta = "1.8"
tempfile = "3.4"
tikv-jemallocator = "0.5"
