[package]
edition = { workspace = true }
license = { workspace = true }
name = "fuel-core-benches"
publish = false
version = "0.0.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
criterion = { version = "0.5", features = [
  "html_reports",
  "async",
  "async_tokio",
] }
ctrlc = "3.2.3"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
enum-iterator = { workspace = true }
ethnum = "1.3"
fuel-core = { path = "../crates/fuel-core", default-features = false, features = [
  "smt",
  "rocksdb-production",
] }
fuel-core-chain-config = { workspace = true }
fuel-core-database = { path = "./../crates/database" }
fuel-core-services = { path = "./../crates/services" }
fuel-core-storage = { path = "./../crates/storage" }
fuel-core-sync = { path = "./../crates/services/sync", features = [
  "benchmarking",
] }
fuel-core-types = { path = "./../crates/types", features = ["test-helpers"] }
futures = { workspace = true }
itertools = { workspace = true }
num_enum = { workspace = true }
p256 = { version = "0.13", default-features = false, features = [
  "digest",
  "ecdsa",
] }
postcard = { workspace = true }
primitive-types = { workspace = true, default-features = false }
quanta = "0.12"
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9.13"
strum = { workspace = true }
strum_macros = { workspace = true }
test-helpers = { path = "../tests/test-helpers" }
tikv-jemallocator = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[[bench]]
harness = false
name = "import"

[[bench]]
harness = false
name = "state"

[[bench]]
harness = false
name = "vm"

[features]
default = ["fuel-core/rocksdb"]

[[bench]]
harness = false
name = "block_target_gas"

[[bench]]
harness = false
name = "transaction_throughput"

[[bench]]
harness = false
name = "db_lookup_times"
