[package]
edition = { workspace = true }
license = { workspace = true }
name = "fuel-core-benches"
publish = false
version = "0.0.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
criterion = { workspace = true, features = ["html_reports", "async", "async_tokio"] }
ctrlc = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
enum-iterator = { workspace = true }
ethnum = { workspace = true }
fuel-core = { path = "../crates/fuel-core", default-features = false, features = [
  "smt",
  "rocksdb-production",
] }
fuel-core-chain-config = { workspace = true }
fuel-core-database = { path = "./../crates/database" }
fuel-core-services = { path = "./../crates/services" }
fuel-core-storage = { path = "./../crates/storage", features = ["smt"] }
fuel-core-sync = { path = "./../crates/services/sync", features = [
  "benchmarking",
] }
fuel-core-trace = { path = "./../crates/trace" }
fuel-core-types = { path = "./../crates/types", features = ["test-helpers"] }
futures = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
num_enum = { workspace = true }
p256 = { workspace = true, features = ["digest", "ecdsa"] }
postcard = { workspace = true }
primitive-types = { workspace = true, default-features = false }
quanta = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
test-helpers = { workspace = true }
tikv-jemallocator = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[[bench]]
harness = false
name = "import"

[[bench]]
harness = false
name = "state"

[[bench]]
harness = false
name = "vm"

[features]
default = ["fuel-core/rocksdb", "fuel-core/rocksdb-production"]
fault-proving = [
  "fuel-core-types/fault-proving",
  "fuel-core-chain-config/fault-proving",
  "fuel-core/fault-proving",
  "fuel-core-storage/fault-proving",
  "fuel-core-database/fault-proving",
  "fuel-core-sync/fault-proving",
]

[[bench]]
harness = false
name = "block_target_gas"

[[bench]]
harness = false
name = "transaction_throughput"

[[bench]]
harness = false
name = "db_lookup_times"
