[package]
name = "fuel-block-executor"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "Fuel Block Executor"

[dependencies]
anyhow = { workspace = true }
fuel-core-interfaces = { workspace = true }
tokio = { workspace = true, features = ["full"] }
