[package]
name = "fuel-block-importer"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "Fuel Block Importer"

[dependencies]
anyhow = { workspace = true }
fuel-core-interfaces = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["full"] }
