[package]
name = "fuel-block-producer"
version = "0.10.1"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "fuel", "fuel-vm"]
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-core"
description = "Fuel Block Producer"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
fuel-core-interfaces = { path = "../fuel-core-interfaces", version = "0.10.1" }
parking_lot = "0.12"
tokio = { version = "1.14", features = ["full"] }
tracing = { version = "0.1" }

[dev-dependencies]
fuel-core = { path = "../fuel-core" }
fuel-txpool = { path = "../fuel-txpool" }
fuel-block-executor = { path = "../fuel-block-executor" }
fuel-block-importer = { path = "../fuel-block-importer" }
fuel-block-producer = { path = "../fuel-block-producer" }
fuel-core-bft = { path = "../fuel-core-bft" }
fuel-relayer = { path = "../fuel-relayer" }
fuel-sync = { path = "../fuel-sync" }
itertools = "0.10"
rand = "0.8"
