[package]
name = "fuel-block-producer"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "Fuel Block Producer"

[dependencies]
anyhow = "1.0"
fuel-core-interfaces = { path = "../fuel-core-interfaces", version = "0.10.1" }
parking_lot = "0.12"
tokio = { version = "1.14", features = ["full"] }
