[package]
name = "fuel-block-producer"
version = "0.11.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "fuel", "fuel-vm"]
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-core"
description = "Fuel Block Producer"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
fuel-core-interfaces = { path = "../fuel-core-interfaces", version = "0.11.0" }
parking_lot = "0.12"
tokio = { version = "1.21", features = ["full"] }
tracing = { version = "0.1" }

[dev-dependencies]
fuel-block-producer = { path = "../fuel-block-producer", features = ["test-helpers"] }
fuel-txpool = { path = "../fuel-txpool", features = ["test-helpers"] }
itertools = "0.10"
rand = "0.8"
rstest = "0.15"

[features]
test-helpers = ["fuel-core-interfaces/test-helpers"]
