[package]
name = "fuel-chain-config"
version = "0.11.2"
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["cryptography::cryptocurrencies"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel-client"]
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-core"
description = "Fuel Chain config types"

[dependencies]
anyhow = "1.0"
fuel-core-interfaces = { path = "../fuel-core-interfaces", version = "0.11.2", features = [
    "serde",
] }
fuel-poa-coordinator = { path = "../fuel-poa-coordinator", version = "0.11.2" }
hex = { version = "0.4", features = ["serde"] }
itertools = "0.10"
rand = "0.8"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_with = "1.11"
tracing = "0.1"

[dev-dependencies]
insta = "1.8"