[package]
name = "fuel-gql-client"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "Tx client and schema specification."

[[bin]]
name = "fuel-gql-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
cynic = { version = "1.0", features = ["surf"] }
derive_more = { workspace = true }
fuel-vm = { workspace = true, features = ["serde"] }
futures = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
surf = { version = "2.2", default-features = false, features = ["h1-client-rustls"] }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[build-dependencies]
schemafy_lib = { version = "0.5", optional = true }
serde_json = { workspace = true, features = ["raw_value"], optional = true }

[features]
test-helpers = []
dap = ["schemafy_lib", "serde_json"]
