[package]
name = "fuel-gql-client"
version = "0.12.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["concurrency", "cryptography::cryptocurrencies", "emulators"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "vm"]
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-core"
description = "Tx client and schema specification."

[[bin]]
name = "fuel-gql-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.1", features = ["derive"] }
cynic = { version = "1.0", features = ["surf"] }
derive_more = { version = "0.99" }
fuel-vm = { version = "0.19", features = ["serde"] }
futures = "0.3"
futures-timer = "3.0"
hex = "0.4"
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
surf = { version = "2.2", default-features = false, features = ["h1-client-rustls"] }
thiserror = "1.0"

[dev-dependencies]
insta = "1.8"

[build-dependencies]
schemafy_lib = { version = "0.5", optional = true }
serde_json = { version = "1.0", features = ["raw_value"], optional = true }

[features]
test-helpers = []
dap = ["schemafy_lib", "serde_json"]
