[package]
name = "fuel-core-bft"
version = "0.9.3"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "fuel", "consensus", "bft"]
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-core"
description = "Fuel Core BFT"

[dependencies]
anyhow = "1.0"
fuel-core-interfaces = { path = "../fuel-core-interfaces", version = "0.9.3" }
parking_lot = "0.12"
tokio = { version = "1.14", features = ["full"] }
