[package]
name = "fuel-core-interfaces"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "Fuel core interfaces"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
fuel-vm = { workspace = true, default-features = false, features = ["random"] }
futures = { workspace = true }
lazy_static = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
test-helpers = [
    "fuel-vm/random", "fuel-vm/test-helpers",
]
serde = ["dep:serde", "fuel-vm/serde", "chrono/serde"]
debug = ["fuel-vm/debug"]
